fix broken css

--- a/src/components/Modals/CreateRoutineModal.css
+++ b/src/components/Modals/CreateRoutineModal.css
@@ -1,4 +1,4 @@
-.create-routine {
+.create-routine .modal-content{
     background-color: rgb(34, 37, 45);
     color: white;
     height: 90%;
